gccida/g1/noce_emit_store_flag
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_emit_store_flag/src/ifcvt.c:972:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v8; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_emit_store_flag/src/ifcvt.c:1000:29: error: use of undeclared identifier 'machine_mode'
v10 = gen_rtx_fmt_ee( v8, ( machine_mode)*( ( unsigned __int8 *)x + 2), cond->fld[0].rtx, *( rtx *)&cond[1]); 
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_emit_store_flag/src/obj/ifcvt.o] Error 1
